<?xml version="1.0"?>
<package format="3">
  <name>dvs_msgs</name>
  <version>0.0.0</version>
  <description>The dvs_msgs package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <buildtool_depend>message_runtime</buildtool_depend>

  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>rosbag2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
